# AutoCV

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/resume/: formatter.rs  formatter_tests.rs  mod.rs  model.rs  optimizer.rs  optimizer_tests.rs  resume_model_tests.rs
src/templates/: classic.md  minimal.md  modern.md
